<resources>
    <string name="app_name">ForzaFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="adventures_started">The adventures awaits you</string>

    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="forgot">Forgot Password</string>
    <string name="createAccount">Create an Account</string>
    <string name="login">LOGIN</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_reset_email">Send Reset Email</string>
    <string name="email_hint">Enter your email</string>

    <string name="cover_image">Add Cover Image</string>
    <string name="edit_cover_button">Add Cover Button</string>
    <string name="add_picture_icon">Add Profile Picture</string>
    <string name="edit_cover_image">Edit Cover Image</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_first_name">Edit First Name</string>
    <string name="edit_last_name">Edit Last Name</string>
    <string name="edit_age">Edit Age</string>
    <string name="edit_description">Edit Description</string>
    <string name="close">Close</string>
    <string name="save_changes">Save Changes</string>

    <string-array name="text_size_options">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>