<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgProfile"
    tools:context=".EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/imgEditCover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cover_placeholder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/black_overlay" />

            <ImageView
                android:id="@+id/imgAddCoverIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/add_picture_icon"
                android:padding="2dp"
                android:src="@drawable/ic_add_picture" />

            <ImageView
                android:id="@+id/imgEditProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/edit_profile_picture"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_placeholder" />

            <View
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/circle_overlay"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/imgAddPictureIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/add_picture_icon"
                android:padding="2dp"
                android:src="@drawable/ic_add_picture" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="First Name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_2"
                android:padding="8dp"
                android:paddingEnd="36dp"
                android:text=""
                android:textColor="@color/textFill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icEditFirstName"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/edit_first_name"
                android:src="@drawable/ic_edit2" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="Last Name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_2"
                android:padding="8dp"
                android:paddingEnd="36dp"
                android:text=""
                android:textColor="@color/textFill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icEditLastName"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/edit_last_name"
                android:src="@drawable/ic_edit2" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="Age"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_2"
                android:inputType="number"
                android:padding="8dp"
                android:paddingEnd="36dp"
                android:text=""
                android:textColor="@color/textFill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icEditAge"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/edit_age"
                android:src="@drawable/ic_edit2" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="Description"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_2"
                android:gravity="top|start"
                android:lines="4"
                android:padding="8dp"
                android:paddingEnd="36dp"
                android:text=""
                android:textColor="@color/textFill"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icEditDescription"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/edit_description"
                android:src="@drawable/ic_edit2" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#4c4c4c"
                android:text="Close"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSaveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#C7FFD477"
                android:drawableEnd="@drawable/ic_save"
                android:drawablePadding="8dp"
                android:paddingEnd="20dp"
                android:text="Save Changes"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
